<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Gris_Firebase"
    android:padding="0dp"
    tools:context=".SearchActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.32"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.32">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/Banner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/banner"
                    android:layout_width="match_parent"
                    android:layout_height="43dp"
                    android:layout_margin="15dp"
                    android:layout_weight="1"
                    android:background="@color/Azul_Firebase"
                    android:textColor="@color/black"
                    android:textIsSelectable="true"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="23dp" />

            <LinearLayout
                android:id="@+id/camp_Titulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/Titulo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="15sp"
                    android:color="@color/black"
                    android:fontFamily="sans-serif-black"
                    android:padding="15sp"
                    android:text="@string/busqueda_personal"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="30sp" />

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="23dp" />

            <TextView
                android:id="@+id/mensaje"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="sans-serif-black"
                android:text=""
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="23dp" />

            <LinearLayout
                android:id="@+id/camp_ID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtEtiqueta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="16dp"
                    android:color="@color/black"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/etiqueta"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/Identificador"
                    android:layout_width="122dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="16dp"
                    android:color="@color/black"
                    android:fontFamily="sans-serif-medium"
                    android:hint="@string/etiqueta"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    android:padding="15dp"
                    android:textColor="@color/black"
                    android:textColorHint="#616161"
                    android:textSize="14sp"
                    tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

                <Button
                    android:id="@+id/Boton_buscar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="16dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/Azul_marino"
                    android:padding="13dp"
                    android:text="@string/buscar"
                    android:textColor="@color/white"
                    android:textSize="11sp"
                    app:icon="@drawable/ic_search"
                    app:iconGravity="start"
                    app:iconTint="@color/white"
                    tools:ignore="TextContrastCheck" />

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="23dp" />

            <LinearLayout
                android:id="@+id/camp_nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtnombre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="16dp"
                    android:color="@color/black"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/nombre"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="16dp"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-medium"
                    android:padding="15sp"
                    android:text=""
                    android:textColor="@color/black"
                    android:textColorHint="#546E7A"
                    android:textSize="14sp" />

            </LinearLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />

            <LinearLayout
                android:id="@+id/camp_apellidos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/apellido_Paterno"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txtAPaterno"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="16dp"
                        android:color="@color/black"
                        android:fontFamily="sans-serif-black"
                        android:text="@string/a_Paterno"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/aPaterno"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="16dp"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-medium"
                        android:padding="15sp"
                        android:text=""
                        android:textColor="@color/black"
                        android:textColorHint="#546E7A"
                        android:textSize="14sp" />

                </LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="23dp" />

                <LinearLayout
                    android:id="@+id/apellido_Materno"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txtAMaterno"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="16dp"
                        android:color="@color/black"
                        android:fontFamily="sans-serif-black"
                        android:text="@string/a_Materno"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/aMaterno"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="16dp"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-medium"
                        android:padding="15sp"
                        android:text=""
                        android:textColor="@color/black"
                        android:textColorHint="#546E7A"
                        android:textSize="14sp" />

                </LinearLayout>

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="23dp" />

            <LinearLayout
                android:id="@+id/camp_edad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtEdad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="16dp"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/edad"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/edad"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="16dp"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-medium"
                    android:padding="15sp"
                    android:text=""
                    android:textColor="@color/black"
                    android:textColorHint="#546E7A"
                    android:textSize="14sp" />
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <LinearLayout
                android:id="@+id/camp_dir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtCalle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="16dp"
                    android:color="@color/black"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/direc"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/dir"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="16dp"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-medium"
                    android:padding="15sp"
                    android:text=""
                    android:textColor="@color/black"
                    android:textColorHint="#546E7A"
                    android:textSize="14sp" />
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="23dp" />

            <LinearLayout
                android:id="@+id/camp_muni"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtMunicipio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="16dp"
                    android:color="@color/black"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/muni"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/municipios"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="16dp"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-medium"
                    android:padding="15sp"
                    android:text=""
                    android:textColor="@color/black"
                    android:textColorHint="#546E7A"
                    android:textSize="14sp" />
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="23dp" />

            <Button
                android:id="@+id/boton_Regresar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:backgroundTint="@color/Azul_marino"
                android:hapticFeedbackEnabled="false"
                android:padding="14dp"
                android:text="@string/regresar"
                android:textColor="@color/white"
                app:icon="@drawable/ic_home"
                app:iconGravity="textStart"
                app:iconTint="@color/white"
                tools:ignore="TextContrastCheck" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="31dp" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>